# tesseract-ocr-cmake

./: CMakeLists.txt
api/: CMakeLists.txt  Makefile.am
ccmain/: CMakeLists.txt
ccstruct/: CMakeLists.txt
ccutil/: CMakeLists.txt
classify/: CMakeLists.txt
cmake/Modules/: PosixMergeStaticLibraries.cmake.in
cube/: CMakeLists.txt
cutil/: CMakeLists.txt
dict/: CMakeLists.txt
doc/: CMakeLists.txt
java/: CMakeLists.txt
java/com/: CMakeLists.txt
java/com/google/: CMakeLists.txt
java/com/google/scrollview/: CMakeLists.txt
java/com/google/scrollview/events/: CMakeLists.txt
java/com/google/scrollview/ui/: CMakeLists.txt
neural_networks/runtime/: CMakeLists.txt
opencl/: CMakeLists.txt
tessdata/: CMakeLists.txt
tessdata/configs/: CMakeLists.txt
tessdata/tessconfigs/: CMakeLists.txt
testing/: CMakeLists.txt
textord/: CMakeLists.txt
training/: CMakeLists.txt
viewer/: CMakeLists.txt
wordrec/: CMakeLists.txt
