
########### install files ###############

install(FILES  batch batch.nochop nobatch matdemo segdemo msdemo DESTINATION share)



#original Makefile.am contents follow:

#datadir = @datadir@/tessdata/tessconfigs
#data_DATA = batch batch.nochop nobatch matdemo segdemo msdemo
#EXTRA_DIST = batch batch.nochop nobatch matdemo segdemo msdemo
